<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ContactoImageView"
        android:layout_width="71dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:src="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/ContactoImageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nombreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreConductor"
            android:textColor="@color/primaryTextColor"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/domicilioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domicilio"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/destinoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SuDestino"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>