<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/FotoImageView"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:src="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuConductor"
                android:textColor="@color/primaryTextColor"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombrePersonaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreConductor"
                android:textColor="@color/primaryTextColor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/SuDestinoPersonaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SuDestino"
                android:textColor="@color/primaryTextColor"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/DatosConductorTextView"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="texto muy largo solo para probar que si se baja el componente y así poder poner cosas como las placas e información del auto (solo aplica para el pasajero) "
        android:textColor="@color/primaryTextColor"
        android:textSize="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/PedirButton"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@color/secondaryDarkColor"
        android:text="@string/pedirAuto"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DatosConductorTextView"
        app:layout_constraintVertical_bias="0.916" />

</android.support.constraint.ConstraintLayout>